- load and save data from server (and then from database) - show all datasets from server - allow access to server from origin - fixed tests
