# server/controllers/DatasetsService.js
@@ -1,6 +1,54 @@
 'use strict';
 var db = require('../db/dbInterface');
 
+exports.find = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+   * query (String)
+   **/
+  var query = args.query.value;
+  var fields = args.fields.value.split(',');
+  db.findDocuments(query).then(function (docs) {
+    console.log('FOUND', docs.length);
+    var result = [];
+    docs.forEach(function (doc) {
+      // get all requested fields from the docs to satisfy the client for whatever
+      // it will do with the result
+      // TODO: iterate over all fields
+      var obj = {};
+      fields.forEach(function (field) {
+        var subFields = field.split('.');
+        var value = null;
+        if (subFields.length > 1) {
+          var value = doc;
+          subFields.forEach(function (sub) {
+            if (value === undefined) {
+              value = undefined;
+              return;
+            }
+            value = value[sub];
+          });
+        } else {
+          value = doc[field];
+        }
+
+        if (value !== undefined) {
+          obj[field] = value;
+        }
+      });
+      result.push(obj);
+    });
+    res.setHeader('Content-Type', 'application/json');
+    // res.status(200).json(dataset);
+    res.end(JSON.stringify(result, null, 2))
+
+  }, function (err) {
+    console.error('nothing found:', err);
+    res.end();
+
+  });
+};
+
 exports.getByID = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -22,6 +70,16 @@ exports.getByID = function(args, res, next) {
   });
 }
 
+exports.getByIDOperation = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+   * id (String)
+   * publish (Boolean)
+   **/
+  // no response value expected for this operation
+  res.end();
+}
+
 exports.set = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -29,6 +87,7 @@ exports.set = function(args, res, next) {
    * data (Dataset)
    * publish (Boolean)
    **/
+  console.log('Store dataset');
 
   var id = args.id.value;
   var doc = args.data.value;
